# python_games

./: .gitignore  README.md
bejeweled/: bejeweled.py
christmas_platformer/: README.md  game.py  pyproject.toml
christmas_platformer/assets/: __init__.py  player.py  simple_platform.py
platformer/: README.md  game.py  leaderboard.txt
platformer_tutorial_2025/: README.md  changelog.md  editor.py  game.py  map.json  pyproject.toml
platformer_tutorial_2025/data/maps/: 0.json  1.json  3.json
platformer_tutorial_2025/data/old_maps/: 0.json
platformer_tutorial_2025/docs/: ai_recommendations.md  audio_fix.md
platformer_tutorial_2025/scripts/: clouds.py  entities.py  particle.py  projectile.py  scene.py  tilemap.py  transitioner.py  utils.py
pong/: pong.py
